--- a/.hintrc
+++ b/.hintrc
@@ -24,7 +24,8 @@
     "axe/text-alternatives": [
       "default",
       {
-        "frame-title": "off"
+        "frame-title": "off",
+        "image-alt": "off"
       }
     ]
   }
